deps/v8/test/message/regress/fail/regress-4266.out
# Copyright 2015 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

*%(basename)s:9: TypeError: [].foo is not a function
    throw e;
    ^
TypeError: [].foo is not a function
    at *%(basename)s:7:8
    at *%(basename)s:11:3
